force-app/main/default/objects/ListenerAccount__e/ListenerAccount__e.object-meta.xml
<CustomObject>
    <label>ListenerAccount</label>
    <pluralLabel>ListenerAccounts</pluralLabel>
</CustomObject>