force-app/main/default/objects/ListenerAccount__e/fields/BillingComplement__c.field-meta.xml
<CustomField>
    <fullName>BillingComplement__c</fullName>
    <label>BillingComplement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>