force-app/main/default/objects/ListenerAccount__e/fields/BillingCountry__c.field-meta.xml
<CustomField>
    <fullName>BillingCountry__c</fullName>
    <label>BillingCountry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>