force-app/main/default/objects/ListenerAccount__e/fields/BillingStateCode__c.field-meta.xml
<CustomField>
    <fullName>BillingStateCode__c</fullName>
    <label>BillingStateCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>