force-app/main/default/objects/ListenerAccount__e/fields/Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Status__c</fullName>
    <label>Customer Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>