force-app/main/default/objects/ListenerAccount__e/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <description>Defines the SAP database instance.</description>
    <label>Entity</label>
    <length>10</length>
    <type>Text</type>
</CustomField>