force-app/main/default/objects/ListenerAccount__e/fields/ExternalID__c.field-meta.xml
<CustomField>
    <fullName>ExternalID__c</fullName>
    <label>ExternalID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>