force-app/main/default/objects/ListenerAccount__e/fields/Invoice_Email__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Email__c</fullName>
    <label>Invoice Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>