force-app/main/default/objects/ListenerAccount__e/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <label>OwnerId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>