force-app/main/default/objects/ListenerAccount__e/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment_Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>