force-app/main/default/objects/ListenerAccount__e/fields/SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Code__c</fullName>
    <label>SAP Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>