force-app/main/default/objects/ListenerAccount__e/fields/SAP_Database__c.field-meta.xml
<CustomField>
    <fullName>SAP_Database__c</fullName>
    <label>SAP_Database</label>
    <length>10</length>
    <type>Text</type>
</CustomField>