force-app/main/default/objects/ListenerAccount__e/fields/SAP_integration_compliance__c.field-meta.xml
<CustomField>
    <fullName>SAP_integration_compliance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SAP integration compliance</label>
    <type>Checkbox</type>
</CustomField>