force-app/main/default/objects/ListenerAccount__e/fields/ShippingCountry__c.field-meta.xml
<CustomField>
    <fullName>ShippingCountry__c</fullName>
    <label>ShippingCountry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>