force-app/main/default/objects/ListenerAccount__e/fields/ShippingNumber__c.field-meta.xml
<CustomField>
    <fullName>ShippingNumber__c</fullName>
    <label>ShippingNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>